@@ -1,4 +1,8 @@
-﻿drkns 01.07.2014 15:43:01 +0200 - build 3973
+﻿drkns 01.07.2014 19:49:09 +0200 - build 3974
+
+1. Продолжение 3970, ещё пара мелочей.
+
+drkns 01.07.2014 15:43:01 +0200 - build 3973
 
 1. Продолжение 3970. Инициализируем импорты не сразу, а когда надо.
 
